Switch to using measureproc to measure the Java and Clojure programs for the problems listed below.  This requires changes to clj-run.sh, java-run.sh, and batch.sh in the corresponding directories.
binarytrees
collatz (Clojure only)
fannkuch
fannkuchredux
fasta
knuc
mandelbrot
n-body
pidigits (Java only)
rcomp
regex-dna
rlines
spectralnorm